--- a/CaliberComics/CaliberComics.html
+++ b/CaliberComics/CaliberComics.html
@@ -93,6 +93,8 @@
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics70.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics73.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics76.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -142,6 +144,7 @@ Titles
 <li><a href="CaliberComics35.jpg">Legendlore</a> (1996)
 <li><a href="CaliberComics36.jpg">Level X</a> (1996)
 <li><a href="CaliberComics37.jpg">Lori Lovecraft</a> (1997)
+<li><a href="CaliberComics76.jpg">Lowlife</a> (1992)
 <li><a href="CaliberComics38.jpg">The Lost</a> (1996)
 <li><a href="CaliberComics39.jpg">Magus</a> (1998)
 <li><a href="CaliberComics40.jpg">Marquis</a> (1997)
