--- a/LoveAndRockets/LoveAndRockets.html
+++ b/LoveAndRockets/LoveAndRockets.html
@@ -49,7 +49,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Love and Rockets is a comic book series by the Hernandez brothers: Gilbert, Jaime, and Mario. It was one of the first comic books in the alternative comics movement of the 1980s.
+Love and Rockets is a comic book series by the Hernandez brothers: Gilbert, <a href="../JaimeHernandez/JaimeHernandez.html">Jaime</a>, and Mario. It was one of the first comic books in the alternative comics movement of the 1980s.
 </p><p>
 The Hernandez brothers produced stories in the series independently of each other. Gilbert and Jaime produced the majority of the material, and tended to focus on particular casts of characters and settings. 
 </p><p>
