--- a/index.html
+++ b/index.html
@@ -60358,10 +60358,10 @@
 </tr>
 
 <tr>
-<td>Ogden Whitney<td>
+<td>Ogden Whitney</td>
 <td>1918</td>
 <td>Creator</td>
-<td><a href="../OgdenWhitney/OgdenWhitney.html">Details</a>
+<td><a href="OgdenWhitney/OgdenWhitney.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65191,10 +65191,10 @@
 </tr>
 
 <tr>
-<td>Ramona Fradon<td>
+<td>Ramona Fradon</td>
 <td>1926</td>
 <td>Creator</td>
-<td><a href="../RamonaFradon/RamonaFradon.html">Details</a>
+<td><a href="../RamonaFradon/RamonaFradon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68201,10 +68201,10 @@
 </tr>
 
 <tr>
-<td>Russ Manning<td>
+<td>Russ Manning</td>
 <td>1926</td>
 <td>Creator</td>
-<td><a href="../RussManning/RussManning.html">Details</a>
+<td><a href="../RussManning/RussManning.html">Details</a></td>
 </tr>
 
 <tr>
