--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -166,6 +166,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics144.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics145.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics146.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics147.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics148.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics149.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -187,8 +190,9 @@ Titles
 <li><a href="Fantagraphics145.jpg">(You and Your) Big Mouth</a> (1993)
 <li><a href="Fantagraphics4.jpg">2 Live Crew</a> (1991)
 <li><a href="Fantagraphics6.jpg">3 New Stories</a> (2013)
+<li><a href="Fantagraphics149.jpg">3D Sweeties</a> (2019)
 <li><a href="Fantagraphics8.jpg">7 Miles a Second</a> (2012)
-<li><a href="Fantagraphics5.jpg">21</a> (2011)
+<li><a href="Fantagraphics5.jpg">21: The Story Of Roberto Clemente</a> (2011)
 <li><a href="Fantagraphics9.jpg">99 Girls</a> (1991)
 <li><a href="Fantagraphics3.jpg">100 Degrees in the Shade</a> (1992)
 <li><a href="Fantagraphics7.jpg">5000 Km Per Second</a> (2016)
