--- a/index.html
+++ b/index.html
@@ -35186,7 +35186,7 @@
 <tr>
 <td>Fu Jitsu</td>
 <td>2017</td>
-<td>AfterShock</td>
+<td>Aftershock</td>
 <td><a href="FuJitsu/FuJitsu.html">Details</a></td>
 </tr>
 
