--- a/JaimeHernandez/JaimeHernandez.html
+++ b/JaimeHernandez/JaimeHernandez.html
@@ -37,6 +37,8 @@ Jaime (sometimes spelled Xaime) Hernandez (1959) is the co-creator of the altern
 </p><p>
 Jaime's main contribution to Love and Rockets is the ongoing serial narrative Locas which follows the tangled lives of a group of primarily Latina characters, from their teenage years in the early days of the California punk scene to the present day. The two central characters of Jaime's cast are Margarita Luisa "Maggie" Chascarrillo and Esperanza Leticia "Hopey" Glass, whose on-again, off-again, open romance is a focus for many Locas storylines. 
 </p><p>
+Jaime also wrote and illustrated the Love and Rockets spin-off <a href="../PennyCentury/PennyCentury.html">Penny Century</a> in 1997.
+</p><p>
 Winner of the <a href="../Awards/Awards.html">Eisner Award</a> Hall of Fame in 2017.
 </p>
 
