--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -163,7 +163,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics141.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics142.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics143.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Fantagraphics144.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PennyCentury/PennyCentury1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics145.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics146.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics147.jpg"></div>
@@ -340,7 +340,7 @@ Titles
 <li><a href="../Palestine/Palestine.html">Palestine</a> (1993)
 <li><a href="Fantagraphics105.jpg">Palomar</a> (2003)
 <li><a href="../DanielClowes/DanielClowes.html">Patience</a> (2016)
-<li><a href="Fantagraphics144.jpg">Penny Century</a> (1997)
+<li><a href="../PennyCentury/PennyCentury.html">Penny Century</a> (1997)
 <li><a href="Fantagraphics106.jpg">Pictopia</a> (1992)
 <li><a href="Fantagraphics107.jpg">Pixy</a> (1993)
 <li><a href="Fantagraphics108.jpg">Pogo: The Complete Syndicated Comic Strips</a> (2011)
