--- a/LoveAndRockets/LoveAndRockets.html
+++ b/LoveAndRockets/LoveAndRockets.html
@@ -151,6 +151,8 @@
 Love and Rockets is a comic book series by the Hernandez brothers: Gilbert, <a href="../JaimeHernandez/JaimeHernandez.html">Jaime</a>, and Mario. It was one of the first comic books in the alternative comics movement of the 1980s. The Hernandez brothers produced stories in the series independently of each other. Gilbert and Jaime produced the majority of the material, and tended to focus on particular casts of characters and settings. Those of Gilbert usually focused on a cast of characters in the fictional Central American village of Palomar; the stories often featured magic realist elements. The Locas stories of Jaime centered on a social group in Los Angeles, particularly the Latin-American friends and sometimes-lovers Maggie and Hopey.
 </p><p>
 The Hernandez brothers self-published the first issue of Love and Rockets in 1981. In 1982, Fantagraphics Books republished this issue with a color cover. The series was published at magazine size, larger than typical American comic books. The first volume ended with the 50th issue in 1996. The second volume ran for twenty issues from 2001 to 2007 in standard US comic book size. A third series, Love and Rockets: New Stories, which ran for eight issues, began in 2008, published annually in 100-page, graphic novel-sized issues. In 2016, the series returned to its original, magazine-sized format.
+</p><p>
+Love and Rockets also had a spin-off <a href="../PennyCentury/PennyCentury.html">Penny Century</a> in 1997.
 </p>
 
 </body>
