--- a/Awards/Awards.html
+++ b/Awards/Awards.html
@@ -36,7 +36,7 @@ The Shazam Award from The Academy of Comic Book Arts ran from 1970-1977. Hall of
 The Inkpot Award is an honor bestowed annually since 1974 by Comic-Con International. 
 </p><p>
 The Jack Kirby Award ran from 1985-1987. Hall of Fame: 
-<ul><li><a href="../CarlBarks/CarlBarks.html">Carl Barks</a>, <a href="../WillEisner/WillEisner.html">Will Eisner</a>, <a href="../JackKirby/JackKirby.html">Jack Kirby</a>. 
+<ul><li><a href="../CarlBarks/CarlBarks.html">Carl Barks</a>, <a href="../WillEisner/WillEisner.html">Will Eisner</a>, <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, <a href="../BasilWolverton/BasilWolverton.html">Basil Wolverton</a>. 
 </ul></p><p>
 The Harvey Awards (https://www.harveyawards.com/) by Fantagraphics, still running since 1987. Hall of Fame:
 <ul><li>2018 <a href="../DaveGibbons/DaveGibbons.html">Dave Gibbons</a>, <a href="../RozChast/RozChast.html">Roz Chast</a>.
