--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton03.jpg"></div>
@@ -38,7 +39,13 @@
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../DarkHorse/Darkhorse47.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../PowerhousePepper/PowerhousePepper1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="BasilWolverton.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -46,7 +53,7 @@
 </p><p>
 Basil Wolverton (July 9, 1909 – December 31, 1978) was an American cartoonist and illustrator known for his intricately detailed grotesques of bizarre or misshapen people. Wolverton was described as "Producer of Preposterous Pictures of Peculiar People who Prowl this Perplexing Planet." His many publishers included Marvel Comics and Mad magazine.
 </p><p>
-He was posthumously inducted into the comic book industry's Jack Kirby Hall of Fame in 1991.
+He was posthumously inducted into the comic book industry's <a href="../Awards/Awards.html">Jack Kirby Hall of Fame</a> in 1991.
 </p><p>
 <li><a href="../BasilWolvertionsGatewayToHorror/BasilWolvertionsGatewayToHorror.html">Gateway To Horror</a> (1988)
 <li><a href="../DarkHorse/Darkhorse47.jpg">Planet of Terror</a> (1987)
