--- a/slideshow.html
+++ b/slideshow.html
@@ -3867,6 +3867,16 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="CaptainAmerica/CA1968series198.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainAmerica/CA1968series199.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainAmerica/CA1968series200.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LoveAndRockets/LoveAndRockets10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -3874,5 +3884,6 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <p>
 <img src="slideshow.jpg">
 </p>
+
 </body>
 </html>
