--- a/index.html
+++ b/index.html
@@ -20722,6 +20722,13 @@
 </tr>
 
 <tr>
+<td>Comics Interview</td>
+<td>1983</td>
+<td>Comics Interview Group</td>
+<td><a href="ComicsInterview/ComicsInterview.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics Jam War</td>
 <td>2006</td>
 <td>About Comics</td>
