--- a/FirstSecondBooks/FirstSecondBooks.html
+++ b/FirstSecondBooks/FirstSecondBooks.html
@@ -198,19 +198,22 @@ Titles
 <li><a href="FirstSecond85.jpg">Kiss Number 8</a> (2019)
 <li><a href="FirstSecond82.jpg">Kitten Construction Company: Meet the House Kittens</a> (2018)
 <li><a href="FirstSecond83.jpg">Koko Be Good</a> (2010)
-<li>Laika (2007)
-<li>Last Pick (2018)
-<li>Legends of Zita the Spacegirl (2012)
-<li>Level Up (2011)
-<li>Lewis &amp; Clark (2011)
-<li>Life Sucks (2008)
-<li>Little Sid (2018)
-<li>Little Vampire (2008)
-<li>Lost Colony v. 1: The Snodgrass Conspiracy (2006)
-<li>Lost Colony v. 2: The Red Menace (2007)
-<li>Lost Colony v. 3: Last Rights (2008)
-<li>Marathon (2012)
-<li>Mastering Comics (2012)
+<li><a href="FirstSecond86.jpg">Laika</a> (2007)
+<li><a href="FirstSecond87.jpg">Last Man</a> (2007)
+<li><a href="FirstSecond88.jpg">Last Of The Sandwalkers</a> (2015)
+<li><a href="FirstSecond89.jpg">Last Pick</a> (2018)
+<li><a href="FirstSecond90.jpg">Laura Dean Keeps Breaking Up with Me</a> (2019)
+<li><a href="FirstSecond91.jpg">Legends of Zita the Spacegirl</a> (2012)
+<li><a href="FirstSecond92.jpg">Level Up</a> (2011)
+<li><a href="FirstSecond93.jpg">Lewis &amp; Clark</a> (2011)
+<li><a href="FirstSecond94.jpg">Life Sucks</a> (2008)
+<li><a href="FirstSecond95.jpg">Lily The Thief</a> (2019)
+<li><a href="FirstSecond96.jpg">Little Robot</a> (2015)
+<li><a href="FirstSecond97.jpg">Little Vampire</a> (2008)
+<li><a href="FirstSecond98.jpg">Lost Colony</a> (2006)
+<li><a href="FirstSecond99.jpg">Maker Comics</a> (2019)
+<li><a href="FirstSecond100.jpg">Marathon</a> (2012)
+<li><a href="FirstSecond101.jpg">Mastering Comics</a> (2012)
 <li>Mighty Jack and the Goblin King (2017)
 <li>Missouri Boy (2006)
 <li>Monk! (2018)
