--- a/index.html
+++ b/index.html
@@ -44941,6 +44941,13 @@
 </tr>
 
 <tr>
+<td>Jessica Abel</td>
+<td>1969</td>
+<td>Creator</td>
+<td><a href="JessicaAbel/JessicaAbel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jessica Jones</td>
 <td>2001</td>
 <td>Marvel</td>
