--- a/PhilippeDruillet/PhilippeDruillet.html
+++ b/PhilippeDruillet/PhilippeDruillet.html
@@ -27,6 +27,13 @@
 <div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet07.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PhilippeDruillet15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -45,6 +52,17 @@ In 1975 Druillet joined Jean-Pierre Dionnet, Bernard Farkas and Moebius to form 
 Outside his work as a cartoonist and illustrator, Druillet has also been active in architecture, rock opera, painting, sculpture and digital art. He worked as a designer on the film, Sorcerer directed by William Friedkin in 1976. 
 </p><p>
 He collaborated on Rolf Liebermann's Wagner Space Opera in the Opera de Paris in the late 70s to early 80s, and founded the Space Art Création in 1984. More recently he created the artwork and designed large parts of the background of the 2005 TV miniseries remake Les Rois maudits.
+</p><p>
+Titles
+</p><p>
+<li><a href="PhilippeDruillet12.jpg">Loan Sloane: The Six Voyages Of Loan Sloane</a> 2015 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet14.jpg">Loan Sloane: Delirius</a> 2015 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet11.jpg">Loan Sloane: Gail</a> 2018 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet13.jpg">Loan Sloane: Chaos</a> 2018 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet15.jpg">Yragaël & Urm the Mad</a> 2018 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet09.jpg">Salammbo</a> 2019 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+<li><a href="PhilippeDruillet10.jpg">The Night</a> 2019 by <a href="../TitanBooks/TitanBooks.html">Titan Books</a>
+
 </p>
 </body>
 </html>
