--- a/PrintMint/PrintMint.html
+++ b/PrintMint/PrintMint.html
@@ -93,7 +93,7 @@ The Print Mint's bold experiment with Arcade: The Comix Revue, started in 1975 a
 </p><p>
 <li><a href="PrintMint1.jpg">(Not Only) The Best of Wonder Wart-Hog</a>  	1973
 <li><a href="PrintMint2.jpg">All Girl Thrills</a>  	1971
-<li><a href="PrintMint3.jpg">Arcade the Comics Revue</a>  	1975
+<li><a href="../Arcade/Arcade.html">Arcade: the Comics Revue</a>  	1975
 <li><a href="PrintMint4.jpg">Bent</a>  	1971
 <li><a href="../KitchenSinkPress/KitchenSinkPress.html">Bijou Funnies</a>  	1969
 <li><a href="PrintMint5.jpg">Book of Raziel</a>  	1969
