--- a/index.html
+++ b/index.html
@@ -6987,6 +6987,13 @@
 </tr>
 
 <tr>
+<td>Arcade Comics Magazine</td>
+<td>1975</td>
+<td>Print Mint</td>
+<td><a href="Arcade/Arcade.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arcana Comics</td>
 <td>2004</td>
 <td>Publisher</td>
@@ -12227,9 +12234,9 @@
 
 <tr>
 <td>Bijou Funnies</td>
-<td>1970</td>
-<td>Kitchen Sink</td>
-<td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+<td>1968</td>
+<td>Print Mint</td>
+<td><a href="BijouFunnies/BijouFunnies.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12300,6 +12307,13 @@
 <td>1922</td>
 <td>Creator</td>
 <td><a href="BillGaines/BillGaines.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bill Griffith</td>
+<td>1944</td>
+<td>Creator</td>
+<td><a href="BillGriffith/BillGriffith.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30895,6 +30909,13 @@
 </tr>
 
 <tr>
+<td>Escape Magazine</td>
+<td>1983</td>
+<td>Titan</td>
+<td><a href="Escape/Escape.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Escape From Devil's Island</td>
 <td>1952</td>
 <td>Avon</td>
@@ -45267,6 +45288,13 @@
 <td>1998</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jay Kinney</td>
+<td>1950</td>
+<td>Creator</td>
+<td><a href="JayKinney/JayKinney.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66324,7 +66352,7 @@
 </tr>
 
 <tr>
-<td>RAW</td>
+<td>RAW Magazine    </td>
 <td>1980</td>
 <td>Raw Books</td>
 <td><a href="Raw/Raw.html">Details</a></td>
