--- a/TitanBooks/TitanBooks.html
+++ b/TitanBooks/TitanBooks.html
@@ -166,45 +166,17 @@ Titles
 <li><a href="Titan76.jpg">Death Sentence</a> (2013)
 <li><a href="Titan77.jpg">Death Sentence: London</a> (2015)
 <li><a href="Titan78.jpg">Death: The Time of Your Life</a> (1997)
-<li><a href="Titan1.jpg">Definitive Betty Boop      2015    1 issues (1 indexed)    Gallery     September 2015
-<li><a href="Titan1.jpg">Deus Ex: Children's Crusade    2016    5 issues (0 indexed)    Have 1 (Need 13)    2016 - 2016
-<li><a href="Titan1.jpg">Dishonored     2016    4 issues (0 indexed)    Have 2 (Need 10)    2016 - 2016
-<li><a href="Titan1.jpg">Dishonored: Peeress and the Price      2017    2 issues (0 indexed)    Gallery     2017 - 2017
-<li><a href="Titan1.jpg">Doctor Radar   2018    2 issues (0 indexed)    Have 2 (Need 1)     2018 - Present
-<li><a href="Titan1.jpg">Doctor Who 2017 Convention Special     2017    1 issues (0 indexed)    Gallery     2017
-<li><a href="Titan1.jpg">Doctor Who Comic   2015    8 issues (0 indexed)    Have 7 (Need 2)     2015 - 2017
-<li><a href="Titan1.jpg">Doctor Who Event 2015: The Four Doctors    2015    5 issues (5 indexed)    Have 11 (Need 6)    September 2015 - October 2015
-<li><a href="Titan1.jpg">Doctor Who: Ghost Stories      2017    4 issues (3 indexed)    Have 3 (Need 13)    May 2017 - 2017
-<li><a href="Titan1.jpg">Doctor Who: Prisoners of Time Omnibus      2016    1 issues (1 indexed)    Gallery     January 2016
-<li><a href="Titan1.jpg">Doctor Who: Special    2017    2 issues (2 indexed)    Gallery     November 2017 - November 2017
-<li><a href="Titan1.jpg">Doctor Who: Supremacy of the Cybermen      2016    5 issues (5 indexed)    Gallery     August 2016 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Eighth Doctor      2015    5 issues (1 indexed)    Have 3 (Need 12)    November 2015 - April 2016
-<li><a href="Titan1.jpg">Doctor Who: The Eleventh Doctor    2014    15 issues (8 indexed)   Have 22 (Need 16)   August 2014 - 2015
-<li><a href="Titan1.jpg">Doctor Who: The Eleventh Doctor, The Sapling   2017    3 issues (0 indexed)    Have 2 (Need 1)     2017 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Eleventh Doctor, Year One Complete Edition     2017    1 issues (0 indexed)    Gallery     2017
-<li><a href="Titan1.jpg">Doctor Who: The Eleventh Doctor, Year Three    2017    13 issues (6 indexed)   Have 10 (Need 25)   February 2017 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Eleventh Doctor, Year Two      2015    15 issues (5 indexed)   Have 7 (Need 35)    2015 - December 2016
-<li><a href="Titan1.jpg">Doctor Who: The Fourth Doctor      2016    5 issues (5 indexed)    Gallery     April 2016 - October 2016
-<li><a href="Titan1.jpg">Doctor Who: The Long Con   2016    1 issues (0 indexed)    Gallery     2016
-<li><a href="Titan1.jpg">Doctor Who: The Lost Dimension Alpha   2017    1 issues (1 indexed)    Gallery     September 2017
-<li><a href="Titan1.jpg">Doctor Who: The Lost Dimension Omega   2017    1 issues (1 indexed)    Gallery     November 2017
-<li><a href="Titan1.jpg">Doctor Who: The Ninth Doctor   2015    5 issues (1 indexed)    Have 3 (Need 8)     April 2015 - 2015
-<li><a href="Titan1.jpg">Doctor Who: The Ninth Doctor Ongoing   2016    15 issues (15 indexed)  Gallery     May 2016 - September 2017
-<li><a href="Titan1.jpg">Doctor Who: The Ninth Special      2017    1 issues (1 indexed)    Gallery     October 2017
-<li><a href="Titan1.jpg">Doctor Who: The Road to the Thirteenth Doctor      2018    3 issues (0 indexed)    Have 1 (Need 10)    August 2018 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Seventh Doctor     2018    3 issues (3 indexed)    Gallery     July 2018 - September 2018
-<li><a href="Titan1.jpg">Doctor Who: The Tenth Doctor   2014    15 issues (4 indexed)   Have 26 (Need 25)   August 2014 - 2015
-<li><a href="Titan1.jpg">Doctor Who: The Tenth Doctor, Year One Complete Edition    2017    1 issues (0 indexed)    Gallery     2017
-<li><a href="Titan1.jpg">Doctor Who: The Tenth Doctor, Year Three   2017    14 issues (4 indexed)   Have 42 (Need 5)    2017 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Tenth Doctor, Year Two     2015    17 issues (7 indexed)   Have 10 (Need 36)   2015 - 2016
-<li><a href="Titan1.jpg">Doctor Who: The Third Doctor   2016    5 issues (5 indexed)    Have 19 (Need 2)    October 2016 - March 2017
-<li><a href="Titan1.jpg">Doctor Who: The Thirteenth Doctor      2018    13 issues (13 indexed)  Have 51 (Need 3)    October 2018 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Thirteenth Doctor Holiday Special      2019    2 issues (2 indexed)    Gallery     December 2019 - January 2020
-<li><a href="Titan1.jpg">Doctor Who: The Twelfth Doctor     2014    16 issues (7 indexed)   Have 37 (Need 28)   November 2014 - January 2016
-<li><a href="Titan1.jpg">Doctor Who: The Twelfth Doctor, Year One Complete Edition      2017    1 issues (0 indexed)    Gallery     November 2017
-<li><a href="Titan1.jpg">Doctor Who: The Twelfth Doctor, Year Three     2017    13 issues (3 indexed)   Have 38 (Need 7)    May 2017 - Present
-<li><a href="Titan1.jpg">Doctor Who: The Twelfth Doctor, Year Two   2016    15 issues (5 indexed)   Have 12 (Need 31)   2016 - 2017
-<li><a href="Titan1.jpg">Epic Chronicles of Hagar the Horrible: Dailies     2009    8 issues (3 indexed)    Gallery     October 2009 - Present
+<li><a href="Titan79.jpg">Definitive Betty Boop</a> (2015)
+<li><a href="Titan80.jpg">Deus Ex: Children's Crusade</a> (2016)
+<li><a href="Titan81.jpg">Dishonored</a> (2016)
+<li><a href="Titan82.jpg">Dishonored: Peeress and the Price</a> (2017)
+<li><a href="Titan83.jpg">Doctor Radar</a> (2018)
+<li><a href="Titan84.jpg">Doctor Who Comic</a> (2015)
+<li><a href="Titan85.jpg">Doctor Who: Ghost Stories</a> (2017)
+<li><a href="Titan86.jpg">Doctor Who: Prisoners of Time Omnibus</a> (2016)
+<li><a href="Titan87.jpg">Doctor Who: Special</a> (2017)
+<li><a href="Titan88.jpg"> Duck Feet: A Heartbreak Soup Graphic Novel</a> (1988)
+<li><a href="Titan89.jpg">Epic Chronicles of Hagar the Horrible: Dailies</a> (2009)
 <li><a href="Titan1.jpg">Escape     1986    10 issues (10 indexed)  Gallery     1987 - Autumn 1989
 <li><a href="Titan1.jpg">Everybody Loves Tank Girl      2012    3 issues (0 indexed)    Gallery     2012 - 2012
 <li><a href="Titan1.jpg">Evil Within    2014    4 issues (0 indexed)    Have 3 (Need 2)     2014 - 2015
@@ -318,31 +290,32 @@ Titles
 <li><a href="Titan1.jpg">Robotech Archives The Macross Saga     2018    3 issues (1 indexed)    Gallery     May 2018 - Present
 <li><a href="Titan1.jpg">Robotech Free Comic Book Day Issue     2019    1 issues (1 indexed)    Gallery     2019
 <li><a href="Titan1.jpg">Robotech Remix     2019    4 issues (0 indexed)    Have 16 (Need 1)    2019 - Present
+<li><a href="Titan1.jpg">Salammbo</a> 2019
 <li><a href="Titan1.jpg">Sally of the Wasteland     2014    5 issues (1 indexed)    Have 2 (Need 3)     August 2014 - 20146
 <li><a href="Titan1.jpg">Samurai: Brothers in Arms      2016    8 issues (0 indexed)    Have 13 (Need 5)    2016 - 2017
-<li><a href="Titan1.jpg">The Sandman: A Game of You     1993    1 issues (0 indexed)    Gallery     1993
-<li><a href="Titan1.jpg">The Sandman: Endless Nights    2003    1 issues (1 indexed)    Gallery     [2003]
-<li><a href="Titan1.jpg">The Sandman: Season of Mists   1992    1 issues (0 indexed)    Have 1 (Need 1)     1992
+<li><a href="Titan1.jpg">Sandman: A Game of You     1993    1 issues (0 indexed)    Gallery     1993
+<li><a href="Titan1.jpg">Sandman: Endless Nights    2003    1 issues (1 indexed)    Gallery     [2003]
+<li><a href="Titan1.jpg">Sandman: Season of Mists   1992    1 issues (0 indexed)    Have 1 (Need 1)     1992
 <li><a href="Titan1.jpg">Scarlett Couture   2015    4 issues (4 indexed)    Have 4 (Need 4)     [April] 2015 - 2015
-<li><a href="Titan1.jpg">The Season of the Snake    2018    3 issues (3 indexed)    Gallery     May 2018 - July 2018
+<li><a href="Titan1.jpg">Season of the Snake    2018    3 issues (3 indexed)    Gallery     May 2018 - July 2018
 <li><a href="Titan1.jpg">Shades of Magic: The Steel Prince      2019    1 issues (1 indexed)    Gallery     March 2019
 <li><a href="Titan1.jpg">Sherlock: A Scandal in Belgravia   2019    4 issues (0 indexed)    Have 1 (Need 14)    2019 - Present
 <li><a href="Titan1.jpg">Sherlock: The Blind Banker     2017    1 issues (0 indexed)    Gallery     [October] 2017
 <li><a href="Titan1.jpg">Sherlock: The Great Game   2017    6 issues (0 indexed)    Have 12 (Need 5)    September 2017 - 2017
 <li><a href="Titan1.jpg">Showman Killer [a]     2015    3 issues (0 indexed)    Have 1 (Need 2)     2015 - 2017
-<li><a href="Titan1.jpg">The Simon and Kirby Library    2010    4 issues (4 indexed)    Gallery     October 2010 - March 2014
-<li><a href="Titan1.jpg">The Simpsons Annual    2009    9 issues (3 indexed)    Have 6 (Need 3)     August 2009 - Present
+<li><a href="Titan1.jpg">Simon and Kirby Library    2010    4 issues (4 indexed)    Gallery     October 2010 - March 2014
+<li><a href="Titan1.jpg">Simpsons Annual    2009    9 issues (3 indexed)    Have 6 (Need 3)     August 2009 - Present
 <li><a href="Titan1.jpg">Simpsons Comics    1997    264 issues (56 indexed)     Have 5 (Need 262)   March 1997 - 2017
 <li><a href="Titan1.jpg">Simpsons Comics Barn Burner    2005    1 issues (1 indexed)    Have 1 (Need 1)     January 2005
-<li><a href="Titan1.jpg">The Simpsons Comics Beach Blanket Bongo    2007    1 issues (0 indexed)    Gallery     January 2007
+<li><a href="Titan1.jpg">Simpsons Comics Beach Blanket Bongo    2007    1 issues (0 indexed)    Gallery     January 2007
 <li><a href="Titan1.jpg">Simpsons Comics Featuring: Bartman the Best of the Best    1997    1 issues (0 indexed)    Gallery     1997
-<li><a href="Titan1.jpg">The Simpsons Comics Hit the Road!      2008    1 issues (0 indexed)    Gallery     January 2008
+<li><a href="Titan1.jpg">Simpsons Comics Hit the Road!      2008    1 issues (0 indexed)    Gallery     January 2008
 <li><a href="Titan1.jpg">Skizz      1989    1 issues (1 indexed)    Gallery     March 1989
 <li><a href="Titan1.jpg">Sky Doll: Sudra    2017    2 issues (0 indexed)    Have 1 (Need 6)     2017 - 2017
 <li><a href="Titan1.jpg">Slaine     1986    2 issues (0 indexed)    Have 1 (Need 1)     1986 - 1986
 <li><a href="Titan1.jpg">Snowpiercer    2014    4 issues (3 indexed)    Have 2 (Need 2)     February 2014 - 2016
-<li><a href="Titan1.jpg">The Spider: King of Crooks     2005    1 issues (1 indexed)    Gallery     October 2005
-<li><a href="Titan1.jpg">The Spirit     1989    1 issues (0 indexed)    Gallery     April 1989
+<li><a href="Titan1.jpg">Spider: King of Crooks     2005    1 issues (1 indexed)    Gallery     October 2005
+<li><a href="Titan1.jpg">Spirit     1989    1 issues (0 indexed)    Gallery     April 1989
 <li><a href="Titan1.jpg">Star Trek: Countdown to Darkness   2013    1 issues (0 indexed)    Gallery     May 2013
 <li><a href="Titan1.jpg">Star Trek: Countdown TPB   2009    1 issues (0 indexed)    Gallery     2009
 <li><a href="Titan1.jpg">Star Trek: Deep Space Nine/Star Trek: The Next Generation      1995    1 issues (1 indexed)    Gallery     August 1995
@@ -403,10 +376,10 @@ Titles
 <li><a href="Titan1.jpg">Transformers: Time Wars    2003    1 issues (0 indexed)    Have 1 (Need 1)     July 2003
 <li><a href="Titan1.jpg">Transformers: Way of the Warrior   2005    1 issues (0 indexed)    Gallery     July 2005
 <li><a href="Titan1.jpg">Triggerman     2016    5 issues (1 indexed)    Have 3 (Need 12)    October 2016 - 2017
-<li><a href="Titan1.jpg">The Troop      2015    5 issues (0 indexed)    Have 1 (Need 9)     January 2016 - 2016
+<li><a href="Titan1.jpg">Troop      2015    5 issues (0 indexed)    Have 1 (Need 9)     January 2016 - 2016
 <li><a href="Titan1.jpg">Under: Scourge of the Sewer    2018    2 issues (1 indexed)    Gallery     2018 - February 2018
 <li><a href="Titan1.jpg">V for Vendetta     1990    1 issues (0 indexed)    Gallery     June 1990
-<li><a href="Titan1.jpg">The VC's   1987    4 issues (0 indexed)    Have 2 (Need 2)     1987 - 1987
+<li><a href="Titan1.jpg">VC's   1987    4 issues (0 indexed)    Have 2 (Need 2)     1987 - 1987
 <li><a href="Titan1.jpg">Vikings: Godhead   2016    4 issues (1 indexed)    Have 14 (Need 2)    May 2016 - [August] 2016
 <li><a href="Titan1.jpg">Vikings: Uprising      2016    4 issues (0 indexed)    Have 4 (Need 11)    October 2016 - 2017
 <li><a href="Titan1.jpg">Violent Cases  1991    1 issues (0 indexed)    Gallery     1991
@@ -419,10 +392,10 @@ Titles
 <li><a href="Titan1.jpg">Warhammer 40000: Fallen    2017    4 issues (0 indexed)    Have 7 (Need 2)     October 2017 - Present
 <li><a href="Titan1.jpg">Warhammer 40000: Revelations   2017    4 issues (0 indexed)    Have 2 (Need 7)     2017 - August 2017
 <li><a href="Titan1.jpg">Watchmen   1987    1 issues (1 indexed)    Gallery     1987
-<li><a href="Titan1.jpg">The Wizard of Id: Dailies and Sundays      2011    3 issues (1 indexed)    Gallery     September 2011 - September 2013
+<li><a href="Titan1.jpg">Wizard of Id: Dailies and Sundays      2011    3 issues (1 indexed)    Gallery     September 2011 - September 2013
 <li><a href="Titan1.jpg">Wolfenstein    2017    2 issues (0 indexed)    Have 3 (Need 4)     October 2017 - Present
 <li><a href="Titan1.jpg">Wonderful World of Tank Girl   2017    4 issues (4 indexed)    Gallery     November 2017 - May 2018
-<li><a href="Titan1.jpg">The World of Andy Capp     1990    1 issues (0 indexed)    Gallery     October 1990
+<li><a href="Titan1.jpg">World of Andy Capp     1990    1 issues (0 indexed)    Gallery     October 1990
 <li><a href="Titan1.jpg">World War Tank Girl    2017    1 issues (0 indexed)    Gallery     [October] 2017
 <li><a href="Titan1.jpg">World War X    2016    6 issues (0 indexed)    Have 3 (Need 15)    2016 - 2017
 <li><a href="Titan1.jpg">WWE Heroes     2010    8 issues (0 indexed)    Have 10 (Need 2)    2010 - 2011
