Titan Books index

--- a/TitanBooks/TitanBooks.html
+++ b/TitanBooks/TitanBooks.html
@@ -293,13 +293,13 @@
 </p><p>
 Titles
 </p><p>
-<li><a href="Titan1.jpg">'Action' - The Story of a Violent Comic</a> (1990)
-<li><a href="Titan2.jpg">13 Coins</a> (2014)
+<li><a href="Titan1.jpg">13 Coins</a> (2014)
 <li><a href="Titan3.jpg">21st Century Tank Girl</a> (2015)
 <li><a href="Titan4.jpg">A.B.C. Warriors</a> (1983)
+<li><a href="Titan7.jpg">A.B.C Warriors: The Mek-Nificent Seven</a> (2002)
 <li><a href="Titan5.jpg">A1</a> (2013)
 <li><a href="Titan6.jpg">A1 Annual</a> (2013)
-<li><a href="Titan7.jpg">ABC Warriors: The Mek-Nificent Seven</a> (2002)
+<li><a href="Titan2.jpg">Action: The Story of a Violent Comic</a> (1990)
 <li><a href="Titan8.jpg">Adler</a> (2020)
 <li><a href="Titan9.jpg">Adventures of Puss in Boots</a> (2016)
 <li><a href="Titan10.jpg">Alan Moore's Shocking Futures</a> (1986)
