--- a/index.html
+++ b/index.html
@@ -492,6 +492,13 @@
 </tr>
 
 <tr>
+<td>13 Coins</td>
+<td>1981</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>13th Of Never</td>
 <td>2004</td>
 <td>Slave Labor</td>
@@ -587,6 +594,13 @@
 <td>2002</td>
 <td>Wildstorm</td>
 <td><a href="21Down/21Down.html">Details</a></td>
+</tr>
+
+<tr>
+<td>21st Century Tank Girl</td>
+<td>2015</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1396,6 +1410,13 @@
 
 <tr>
 <td>A.B.C. Warriors</td>
+<td>1983</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A.B.C. Warriors</td>
 <td>1990</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
@@ -1406,6 +1427,13 @@
 <td>1993</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A.B.C Warriors: The Mek-Nificent Seven</td>
+<td>1983</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1469,6 +1497,20 @@
 <td>1992</td>
 <td>Epic</td>
 <td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A1</td>
+<td>2013</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A1 Annual</td>
+<td>2013</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2175,6 +2217,13 @@
 </tr>
 
 <tr>
+<td>Action: The Story Of A Violent Comic</td>
+<td>1990</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action! Mystery! Thrills!</td>
 <td>2011</td>
 <td>Fantagraphics</td>
@@ -2326,6 +2375,13 @@
 <td>2002</td>
 <td>Publisher</td>
 <td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adler</td>
+<td>2020</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2815,6 +2871,13 @@
 <td>1955</td>
 <td>Atlas</td>
 <td><a href="PinkyLee/pinkylee.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures of Puss in Boots</td>
+<td>2016</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3694,6 +3757,13 @@
 </tr>
 
 <tr>
+<td>Alan Moore's Shocking Futures</td>
+<td>1986</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alan Moore's Songbook</td>
 <td>1998</td>
 <td>Caliber</td>
@@ -3705,6 +3775,13 @@
 <td>2003</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alan Moore's Twisted Times</td>
+<td>1987</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3789,6 +3866,13 @@
 <td>2005</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Albion Origins</td>
+<td>2007</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4103,6 +4187,13 @@
 </tr>
 
 <tr>
+<td>Alien Legion: Uncivil War</td>
+<td>2014</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alien Nation</td>
 <td>1990</td>
 <td>Malibu</td>
@@ -4177,6 +4268,13 @@
 <td>1984</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alien: The Illustrated Story</td>
+<td>2012</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4310,6 +4408,13 @@
 <td>1998</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Harvest</td>
+<td>1998</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5657,6 +5762,13 @@
 </tr>
 
 <tr>
+<td>American Flagg!</td>
+<td>2009</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Flyer</a>
 <td>1972</td>
 <td>Last Gasp</td>
@@ -6039,6 +6151,13 @@
 <td>2009</td>
 <td>AdHouse</td>
 <td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Anderson PSI Division</td>
+<td>1988</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6567,6 +6686,13 @@
 </tr>
 
 <tr>
+<td>Anno Dracula: 1895: Seven Days in Mayhem</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Annual</td>
 <td>2017</td>
 <td>Image</td>
@@ -6858,6 +6984,13 @@
 <td>2019</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Apocalypse War</td>
+<td>1984</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8099,6 +8232,39 @@
 </tr>
 
 <tr>
+<td>Assassin's Creed</td>
+<td>2015</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Assassin's Creed: Awakening</td>
+<td>2016</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Assassin's Creed: Conspiracies</td>
+<td>2018</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+<tr>
+<td>Assassin's Creed: Reflections</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+<tr>
+<td>Assassin's Creed: Uprising</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Assembly</td>
 <td>2003</td>
 <td>Antarctic Press</td>
@@ -8376,6 +8542,13 @@
 <td>2002</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Atlas and Axis</td>
+<td>2018</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9352,6 +9525,13 @@
 </tr>
 
 <tr>
+<td>Babylon 5</td>
+<td>1995</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Babyteeth</td>
 <td>2017</td>
 <td>Aftershock</td>
@@ -9815,6 +9995,13 @@
 
 <tr>
 <td>Ballad Of Halo Jones</td>
+<td>1986</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ballad Of Halo Jones</td>
 <td>2005</td>
 <td>DC</td>
 <td><a href="BalladOfHaloJones/BalladOfHaloJones.html">Details</a></td>
@@ -10261,6 +10448,13 @@
 </tr>
 
 <tr>
+<td>Bart Simpson Annual</td>
+<td>2009</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bart Simpson Breaks Out</td>
 <td>2019</td>
 <td>Harper Collins</td>
@@ -10380,6 +10574,13 @@
 </tr>
 
 <tr>
+<td>Batman</td>
+<td>1989</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman / Danger Girl</td>
 <td>2005</td>
 <td>Wildstorm</td>
@@ -10464,6 +10665,13 @@
 </tr>
 
 <tr>
+<td>Batman Versus Predator III: Blood Ties</td>
+<td>1998</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman Year One</td>
 <td>1987</td>
 <td>DC</td>
@@ -10475,6 +10683,13 @@
 <td>1997</td>
 <td>Dark Horse</td>
 <td><a href="BatmanAliens/BatmanAliens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman/Aliens</td>
+<td>1997</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10520,10 +10735,24 @@
 </tr>
 
 <tr>
+<td>Batman: A Death In The Family</td>
+<td>1989</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman: Arkham Asylum</td>
 <td>1990</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman: Arkham Asylum 15th Annivesary Edition</td>
+<td>2004</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10538,6 +10767,13 @@
 <td>1992</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman: Legends</td>
+<td>2007</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10580,6 +10816,13 @@
 <td>1989</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman: The Movies</td>
+<td>1997</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10982,6 +11225,13 @@
 </tr>
 
 <tr>
+<td>Beautiful Death</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beautiful People</td>
 <td>1994</td>
 <td>Slave Labor</td>
@@ -11189,6 +11439,13 @@
 <td>1978</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beetle Bailey The Daily And Sunday Strips</td>
+<td>2010</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11582,10 +11839,24 @@
 </tr>
 
 <tr>
+<td>Best Of Battle</td>
+<td>2009</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Best Of Bugs Bunny</td>
 <td>1967</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Crock</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11624,6 +11895,13 @@
 </tr>
 
 <tr>
+<td>Best Of Hagar The Horrible: the First Epic Ten Years</td>
+<td>2017</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Best Of Marmaduke</td>
 <td>1960</td>
 <td>Charlton</td>
@@ -11635,6 +11913,13 @@
 <td>1992</td>
 <td>Northstar</td>
 <td><a href="NorthstarPublishing/NorthstarPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Simon And Kirby</td>
+<td>2009</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11670,6 +11955,13 @@
 <td>1998</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Transformers Eye Of The Storm</td>
+<td>2007</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13425,6 +13717,13 @@
 </tr>
 
 <tr>
+<td>Blacklist</td>
+<td>2015</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blackout</td>
 <td>2014</td>
 <td>Dark Horse</td>
@@ -13499,6 +13798,13 @@
 <td>1982</td>
 <td>Warner Bros</td>
 <td><a href="BladeRunner/BladeRunner.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blade Runner 2019</td>
+<td>2019</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13730,6 +14036,13 @@
 <td>1991</td>
 <td>Publisher</td>
 <td><a href="Blizzard/Blizzard.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Block Mania</td>
+<td>1984</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14020,6 +14333,13 @@
 </tr>
 
 <tr>
+<td>Bloodborne</td>
+<td>2018</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bloodlines</td>
 <td>1987</td>
 <td>Aircel</td>
@@ -14122,6 +14442,13 @@
 <td>1993</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodthirsty</td>
+<td>2015</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15846,6 +16173,13 @@
 </tr>
 
 <tr>
+<td>Brother Nash</td>
+<td>2018</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brotherhood</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -16162,6 +16496,13 @@
 
 <tr>
 <td>Buffy The Vampire Slayer</td>
+<td>1998</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buffy The Vampire Slayer</td>
 <td>2002</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
@@ -16172,6 +16513,13 @@
 <td>2019</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buffy The Vampire Slayer: Play With Fire</td>
+<td>2003</td>
+<td>Titan</td>
+<td><a href="TitanBooks/TitanBooks.html">Details</a></td>
 </tr>
 
 <tr>
