--- a/index.html
+++ b/index.html
@@ -6168,6 +6168,13 @@
 </tr>
 
 <tr>
+<td>Andrew Loomis</td>
+<td>1892</td>
+<td>Creator</td>
+<td><a href="AndrewLoomis/AndrewLoomis.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Andrew Vachss' Underground</td>
 <td>1994</td>
 <td>Dark Horse</td>
@@ -76191,6 +76198,13 @@
 <td>1936</td>
 <td>King Features</td>
 <td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Steve Rude</td>
+<td>1956</td>
+<td>Creator</td>
+<td><a href="SteveRude/SteveRude.html">Details</a></td>
 </tr>
 
 <tr>
